--- a/ios/ZzangDiaryApp/LaunchScreen.storyboard
+++ b/ios/ZzangDiaryApp/LaunchScreen.storyboard
@@ -16,16 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" insetsLayoutMarginsFromSafeArea="NO" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="OyD-5G-tTN">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="OyD-5G-tTN">
                                 <rect key="frame" x="97" y="195" width="181" height="211"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="splash_asset_3" translatesAutoresizingMaskIntoConstraints="NO" id="k0i-Or-O1r">
+                                <rect key="frame" x="0.0" y="91" width="76" height="185"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="splash_asset_4" translatesAutoresizingMaskIntoConstraints="NO" id="AeJ-i9-fO9">
+                                <rect key="frame" x="58" y="433" width="78" height="135"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="splash_asset_1" translatesAutoresizingMaskIntoConstraints="NO" id="tL7-8Y-DaK">
+                                <rect key="frame" x="290" y="322" width="85" height="209"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="splash_asset_2" translatesAutoresizingMaskIntoConstraints="NO" id="v4P-F8-mbV">
+                                <rect key="frame" x="284" y="47" width="91" height="174"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="0.99215686274509807" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="OyD-5G-tTN" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UP8-ns-qCn"/>
-                            <constraint firstItem="OyD-5G-tTN" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="utF-5T-sK4"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,5 +48,9 @@
     </scenes>
     <resources>
         <image name="splash" width="128" height="158"/>
+        <image name="splash_asset_1" width="128" height="209"/>
+        <image name="splash_asset_2" width="128" height="174.5"/>
+        <image name="splash_asset_3" width="128" height="185"/>
+        <image name="splash_asset_4" width="128" height="135.5"/>
     </resources>
 </document>
